--- a/template/resources/sass/_tabs.scss
+++ b/template/resources/sass/_tabs.scss
@@ -67,6 +67,7 @@
       span.icn {
         display: block;
         position: absolute;
+        background-size: cover !important;
         left: 3px;
         padding-left: 15px;
         padding-bottom: 0; } }
