--- a/template/resources/sass/_class_overview.scss
+++ b/template/resources/sass/_class_overview.scss
@@ -102,6 +102,7 @@
     h3.members-title {
       margin: 20px 0 5px 0;
       padding: 0 0 0 25px;
+      background-size: contain;
       font-size: 1.3em;
       font-weight: bold; }
   h4.members-subtitle {
