--- a/template/resources/sass/_mixins.scss
+++ b/template/resources/sass/_mixins.scss
@@ -18,9 +18,11 @@
 
 @mixin icons {
   .icon-pkg {
-    background: url(../images/icons.png) no-repeat 0 -0px; }
+    background-image: url(../images/pkg.png);
+  }
   .icon-subclass {
-    background: url(../images/icons.png) no-repeat 0 -120px; }
+    background: url(../images/icons.png) no-repeat 0 -120px;
+  }
   .icon-guide {
     background: url(../images/icons.png) no-repeat 0 -360px; }
   .icon-video {
